Moved the footer down some more to prevent it jumping during transitions

--- a/web-ui/src/app/app.component.scss
+++ b/web-ui/src/app/app.component.scss
@@ -1,7 +1,8 @@
 @import '../colors';
+@import "~bulma/sass/components/navbar";
 
 @media only screen and (min-width: $desktop) {
     .main {
-        min-height: 70vh;
+        min-height: calc(100vh - #{$navbar-height});
     }
 }
